--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pulsar-git-plus",
-  "main": "./lib/git-plus",
+  "main": "./dist/main.js",
   "version": "8.7.1",
   "description": "Do git things without the terminal",
   "keywords": [
@@ -16,7 +16,8 @@
   },
   "scripts": {
     "test": "eslint --fix \"lib/**/*.js\" \"spec/**/*.js\" && apm test",
-    "debug": "atom-transpiler-debug-tool"
+    "dev": "cross-env NODE_ENV=development parcel watch --target main lib/git-plus.js",
+    "build": "cross-env NODE_ENV=production parcel build --target main lib/git-plus.js && cp lib/grammars/*.json dist/"
   },
   "deserializers": {
     "pulsar-git-plus/output-view": "deserializeOutputView"
@@ -46,71 +47,50 @@
   "prettier": {
     "printWidth": 100
   },
-  "atomTranspilers": [
-    {
-      "glob": "{lib,spec}/**/*.js",
-      "transpiler": "atom-babel6-transpiler",
-      "options": {
-        "babel": {
-          "presets": [
-            "env",
-            "react"
-          ],
-          "plugins": [
-            "transform-object-rest-spread",
-            [
-              "transform-class-properties",
-              {
-                "spec": true
-              }
-            ]
-          ],
-          "babelrc": false
-        }
-      }
-    },
-    {
-      "transpiler": "atom-ts-transpiler",
-      "glob": "{!(node_modules)/**/,}*.ts?(x)",
-      "options": {
-        "compilerOptions": {},
-        "cacheKeyFiles": [],
-        "verbose": false
-      }
-    }
-  ],
   "dependencies": {
-    "@babel/polyfill": "^7.0.0-beta.51",
-    "@types/atom": "^1.31.0",
-    "@types/react": "^16.7.13",
-    "ansi-to-html": "^0.4.1",
-    "atom-babel6-transpiler": "^1.2.0",
+    "ansi-to-html": "^0.7.2",
     "atom-notify": "^1.1.0",
-    "atom-select-list": "^0.7.1",
-    "atom-space-pen-views": "^2.0.3",
-    "atom-ts-transpiler": "^1.5.2",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "classnames": "^2.2.6",
-    "fs-plus": "^2.2.0",
-    "fuzzaldrin": "^1.2.0",
-    "linkify-urls": "^2.0.0",
-    "node-emoji": "^1.8.1",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "typescript": "^3.2.2",
-    "underscore-plus": "^1.6.6"
+    "atom-select-list": "^0.8.1",
+    "atom-space-pen-views": "^2.2.0",
+    "classnames": "^2.5.1",
+    "cross-env": "7.0.3",
+    "fs-plus": "^2.10.1",
+    "fuzzaldrin": "^2.1.0",
+    "linkify-urls": "^2.2.0",
+    "node-emoji": "^1.11.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "typescript": "^5.9.3",
+    "underscore-plus": "^1.7.0"
   },
   "devDependencies": {
-    "atom-transpiler-debug-tool": "^1.0.5",
-    "babel-eslint": "^8.2.5",
+    "@parcel/transformer-babel": "^2.16.4",
+    "@parcel/transformer-coffeescript": "^2.16.4",
+    "@parcel/transformer-typescript-tsc": "^2.16.4",
+    "@types/atom": "^1.40.18",
+    "@types/react": "^16.14.0",
+    "coffeescript": "^2.7.0",
     "eslint": "^5.0.1",
     "eslint-plugin-react": "^7.10.0",
     "lint": "^1.1.2",
+    "parcel": "^2.16.4",
     "prettier": "^1.13.6",
     "quibble": "^0.3.0",
     "tslint": "^5.11.0"
+  },
+  "targets": {
+    "bundle": {
+      "context": "electron-renderer",
+      "engines": {
+        "electron": ">=12.x"
+      },
+      "includeNodeModules": {
+        "atom": false,
+        "electron": false,
+        "typescript": false
+      },
+      "outputFormat": "commonjs",
+      "isLibrary": true
+    }
   }
 }
