--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,10 @@
     "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
     "importHelpers": true,
-    "lib": ["es2015", "es2016", "es2017", "dom"],
+    "lib": ["es2019", "dom"],
     "module": "commonjs",
+    "esModuleInterop": true,
+    "allowJs": true,
     "moduleResolution": "node",
     "noFallthroughCasesInSwitch": true,
     "noImplicitReturns": false,
@@ -15,8 +17,9 @@
     "rootDir": "./",
     "sourceMap": true,
     "strict": true,
-    "target": "es2017",
-    "jsx": "react"
+    "target": "es2019",
+    "jsx": "react",
+    "noEmit": true
   },
   "exclude": ["node_modules"]
 }
