--- a/package.json
+++ b/package.json
@@ -64,19 +64,23 @@
     "underscore-plus": "^1.7.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "@parcel/transformer-babel": "^2.16.4",
     "@parcel/transformer-coffeescript": "^2.16.4",
     "@parcel/transformer-typescript-tsc": "^2.16.4",
     "@types/atom": "^1.40.18",
+    "@types/mocha": "^8",
     "@types/react": "^16.14.0",
+    "@typescript-eslint/eslint-plugin": "^8.54.0",
+    "@typescript-eslint/parser": "^8.54.0",
     "coffeescript": "^2.7.0",
-    "eslint": "^5.0.1",
-    "eslint-plugin-react": "^7.10.0",
+    "eslint": "^9.39.2",
+    "eslint-plugin-jasmine": "^4.2.2",
+    "eslint-plugin-react": "^7.37.5",
     "lint": "^1.1.2",
     "parcel": "^2.16.4",
-    "prettier": "^1.13.6",
-    "quibble": "^0.3.0",
-    "tslint": "^5.11.0"
+    "prettier": "^2.3.2",
+    "quibble": "^0.3.0"
   },
   "targets": {
     "bundle": {
